examples/java/failing/preserve_order_in_commutative_additions/Left.java
class MyCls {
        int a;
        //! this is b
        int b;
}
